# Vector-3d

./: .gitignore  AGENTS.md  Cargo.toml  DECISIONS.md  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  pistol.glb  shotgun.glb  shotgun.vec  sword.glb
.claude/: settings.json
.claude/hooks/: guard-load-bearing.py
.claude/skills/vector3d-engine/: SKILL.md
assets/: pistol.vec  sword.vec
assets/arena/: arena.gltf  arena.vec  boss_attack.anim.ron  boss_bottom.gltf  boss_bottom.vec  boss_top.gltf  boss_top.vec  healthpack.gltf  healthpack.vec  powerup.gltf  powerup.vec  scene.ron  sentinel.gltf  sentinel.vec  shard.gltf  shard.vec
assets/corridor/: corridor.gltf  corridor.vec  plant.gltf  plant.vec  scene.ron
assets/editor/: demo.ron  demo.vec
assets/suzanne/: README.md  suzanne.vec
assets/test/: cylinder.gltf  cylinder.vec  decorated-cube.gltf  decorated-cube.vec  plane.gltf  plane.vec  pulse-spin.anim.ron
crates/vex-audio/: Cargo.toml
crates/vex-audio/src/: lib.rs  synth.rs
crates/vex-convert/: Cargo.toml
crates/vex-convert/src/: classify.rs  gltf_load.rs  lib.rs  main.rs
crates/vex-core/: Cargo.toml
crates/vex-core/src/: font.rs  frustum.rs  lib.rs  mesh.rs  model.rs  shapes.rs
crates/vex-engine/: Cargo.toml
crates/vex-engine/src/: anim.rs  collide.rs  fly_camera.rs  fps_controller.rs  input.rs  lib.rs  orbit_camera.rs  scene.rs  shell.rs
crates/vex-render/: Cargo.toml
crates/vex-render/src/: camera.rs  gpu.rs  headless.rs  lib.rs  line.rs  occluder.rs  post.rs
crates/vex-render/src/shaders/: camera.wgsl  line.wgsl  occluder.wgsl  post.wgsl
docs/: README.md  building-a-game.md  formats.md  windows.md
examples/01-cube/: Cargo.toml
examples/01-cube/src/: main.rs
examples/02-viewer/: Cargo.toml
examples/02-viewer/src/: main.rs
examples/03-corridor/: Cargo.toml
examples/03-corridor/src/: main.rs
examples/04-arena/: Cargo.toml
examples/04-arena/src/: game.rs  main.rs  sounds.rs
examples/05-editor/: Cargo.toml
examples/05-editor/src/: level.rs  main.rs
examples/06-soundlab/: Cargo.toml
examples/06-soundlab/src/: main.rs  recipe.rs
sketches/: bolt-laser-a.sound.ron  bolt-laser-b.sound.ron  bolt-laser-c.sound.ron  player-gun.sound.ron
tools/: build_web.sh  fit_sound.py  gen_arena.py  gen_corridor.py  gen_test_assets.py  gltf_builder.py  package_demo.sh  paint_pistol.py
web/: index.html
