[workspace]
resolver = "3"
members = [
    "crates/vex-core",
    "crates/vex-render",
    "crates/vex-engine",
    "crates/vex-convert",
    "crates/vex-audio",
    "examples/01-cube",
    "examples/02-viewer",
    "examples/03-corridor",
    "examples/04-arena",
    "examples/05-editor",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
vex-core = { path = "crates/vex-core" }
vex-render = { path = "crates/vex-render" }
vex-engine = { path = "crates/vex-engine" }
vex-convert = { path = "crates/vex-convert" }
vex-audio = { path = "crates/vex-audio" }

gltf = { version = "1.4", default-features = false, features = ["utils", "names", "KHR_materials_emissive_strength"] }
base64 = "0.22"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
web-time = "1"
wasm-bindgen-futures = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
wgpu = "30"
winit = "0.30"
glam = { version = "0.33", features = ["bytemuck", "mint"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
png = "0.18"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

# wgpu/naga are unusably slow at opt-level 0; keep dependencies optimized
# even in dev builds.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Distribution builds: smaller and faster, no debug symbols.
[profile.release]
lto = "thin"
strip = "symbols"
