[package]
name = "vex-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vex-core.workspace = true
wgpu.workspace = true
glam.workspace = true
bytemuck.workspace = true
pollster.workspace = true
png.workspace = true
anyhow.workspace = true
log.workspace = true
