[package]
name = "editor"
version.workspace = true
edition.workspace = true

[dependencies]
vex-core.workspace = true
vex-render.workspace = true
vex-engine.workspace = true
vex-convert.workspace = true

wgpu.workspace = true

anyhow.workspace = true
glam.workspace = true
log.workspace = true
env_logger.workspace = true
pollster.workspace = true
serde.workspace = true
ron.workspace = true
